W-14235111: Add caching configuration