@@ -8,8 +8,7 @@ package com.demandware.carbonj.service.accumulator;
 
 import static com.demandware.carbonj.service.accumulator.MetricAggregationMethod.SUM;
 import static com.demandware.carbonj.service.accumulator.MetricAggregationMethod.AVG;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.util.Arrays;
@@ -34,7 +33,7 @@ public class _MetricAggregationRules
         throws Exception
     {
         configFile = TestFileUtils.setupTestFileFromResource( "/aggregation-rules-test.conf" );
-        MetricAggregationRulesLoader rulesLoader = new MetricAggregationRulesLoader( configFile );
+        MetricAggregationRulesLoader rulesLoader = new MetricAggregationRulesLoader( configFile, false );
         rules = rulesLoader.getRules();
     }
 
@@ -43,35 +42,35 @@ public class _MetricAggregationRules
     public void shouldApply_ecom_ag_rule_with_sum()
     {
         String name = "pod1.ecom.aaba.aaba_prd.blade5-4.aaba_prd.FEATURE_TOGGLES.KeystoreAutoImportEnabled";
-        List<Result> expected = Arrays.asList(new Result("pod1.ecom_ag.aaba.aaba_prd.FEATURE_TOGGLES.KeystoreAutoImportEnabled",
-            SUM, false ));
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        List<Result> expected = List.of(new Result("pod1.ecom_ag.aaba.aaba_prd.FEATURE_TOGGLES.KeystoreAutoImportEnabled",
+                SUM, false));
+        assertEquals( rules.apply( name ), expected );
     }
 
     @Test
     public void shouldApply_ecom_ag_rule_with_avg()
     {
         String name = "pod1.ecom.aaba.aaba_prd.blade5-4.aaba_prd.FEATURE_TOGGLES.KeystoreAutoImportEnabled.mean";
-        List<Result> expected = Arrays.asList( new Result("pod1.ecom_ag.aaba.aaba_prd.FEATURE_TOGGLES.KeystoreAutoImportEnabled.mean",
-            AVG, false ));
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        List<Result> expected = List.of(new Result("pod1.ecom_ag.aaba.aaba_prd.FEATURE_TOGGLES.KeystoreAutoImportEnabled.mean",
+                AVG, false));
+        assertEquals( rules.apply( name ), expected );
     }
 
     @Test
     public void shouldApply_ocapi_rule()
     {
         String name = "pod41.ecom.abbm.abbm_stg.blade0-0.abbm_stg.ocapi.apis.categories.sizes.response.count";
-        List<Result> expected = Arrays.asList( new Result("ocapi.apis.categories.sizes.response.count", SUM,
-            true ));
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        List<Result> expected = List.of(new Result("ocapi.apis.categories.sizes.response.count", SUM,
+                true));
+        assertEquals( rules.apply( name ), expected );
     }
 
     @Test
     public void noRuleApplied()
     {
         String name = "abc.pod41.ecom.abbm.abbm_stg.blade0-0.abbm_stg.ocapi.apis.categories.sizes.response.count";
-        List<Result> expected = Collections.EMPTY_LIST;
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        List<Result> expected = Collections.emptyList();
+        assertEquals( rules.apply( name ), expected );
     }
 
     @Test
@@ -81,7 +80,7 @@ public class _MetricAggregationRules
         List<Result> expected = Arrays.asList(
             new Result("pi.subgroup.response.count", AVG, false ),
             new Result("pi.response.count", AVG, true ));
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        assertEquals( rules.apply( name ), expected );
     }
 
     @Test
@@ -91,15 +90,15 @@ public class _MetricAggregationRules
         List<Result> expected = Arrays.asList(
             new Result("pi.subgroup2.response.count", AVG, true ),
             new Result("pi.response.count", AVG, true ));
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        assertEquals( rules.apply( name ), expected );
     }
 
     @Test
     public void matchOnOnlyOneFromMultipleRules()
     {
         String name = "pi.ttt.response.count";
-        List<Result> expected = Arrays.asList( new Result("pi.response.count", AVG, true ) );
-        assertThat( rules.apply( name ), equalTo( expected ) );
+        List<Result> expected = List.of(new Result("pi.response.count", AVG, true));
+        assertEquals( rules.apply( name ), expected );
     }
 
 }
